# SPFplayground

./: .gitignore  factory.py  main.py  pyproject.toml
recan/factory/: __init__.py  ansatz.py  factory.py  kernel.py
recan/models/: __init__.py  base.py  resnet.py
recan/utils/: __init__.py  scaler.py  test.py
scripts/: plot_losses.py
